--- a/styles.css
+++ b/styles.css
@@ -648,8 +648,8 @@ h1 {
     display: none; /* Esconde o menu inicialmente */
     flex-direction: column;
     position: absolute;
-    top: 70px; 
-    right: 3%; 
+    top: 70px;
+    right: 3%;
     background: #000;
     border-radius: 10px;
     padding: 15px;
@@ -670,32 +670,32 @@ h1 {
   }
 
   .home {
-    flex-direction: column; 
-    padding: 2rem 3.5rem; 
+    flex-direction: column;
+    padding: 2rem 3.5rem;
     margin-bottom: 50px;
   }
 
   .home-info {
     max-width: 90%; /* Reduz a largura para caber em telas menores */
-    margin-left: auto; 
+    margin-left: auto;
     margin-top: 150px;
-    text-align: center; 
+    text-align: center;
   }
 
   h1 {
     font-size: 3rem;
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
   }
 
   .home-info h2 {
-    font-size: 1.5rem; 
-    letter-spacing: 1px; 
+    font-size: 1.5rem;
+    letter-spacing: 1px;
     animation: typing 5s steps(50, end) infinite, gradient-move 5s ease infinite; /* Ajusta o tempo das animações */
   }
 
   .home-image {
     max-width: 90%; /* Reduz a largura máxima */
-    margin-top: 5rem; 
+    margin-top: 5rem;
   }
 
   .photo {
@@ -708,12 +708,12 @@ h1 {
   }
 
   .container-techs h3 {
-    font-size: 1.875rem; 
-    margin-top: 2rem; 
+    font-size: 1.875rem;
+    margin-top: 2rem;
   }
 
   .icons-techs {
-    gap: 0rem; 
+    gap: 0rem;
     margin-top: 1rem;
   }
 
@@ -722,8 +722,8 @@ h1 {
   }
 
   .icons-techs li img {
-    width: 2.5rem; 
-    height: 2.5rem; 
+    width: 2.5rem;
+    height: 2.5rem;
   }
 
   .wrapper-photo {
@@ -732,8 +732,8 @@ h1 {
   }
 
   .links-social {
-    flex-direction: row; 
-    gap: 0.75rem; 
+    flex-direction: row;
+    gap: 0.75rem;
   }
 
   .links-social a img:hover {
@@ -742,7 +742,7 @@ h1 {
 
   .sobre {
     flex-direction: column;
-    height: auto; 
+    height: auto;
     margin-top: 50px;
   }
 
@@ -752,8 +752,8 @@ h1 {
 
   .container-sobre,
   .sobre-text {
-    width: 100%; 
-    height: auto; 
+    width: 100%;
+    height: auto;
   }
 
   .wrapper-img img {
@@ -773,16 +773,16 @@ h1 {
   }
 
   .text h2 {
-    font-size: 2.2rem; 
+    font-size: 2.2rem;
   }
 
   .text p {
-    font-size: 1.8rem; 
+    font-size: 1.8rem;
     text-align: center;
   }
 
   .text h3 {
-    font-size: 1.8rem; 
+    font-size: 1.8rem;
   }
 
   .cv {
@@ -794,8 +794,12 @@ h1 {
   }
 
   .cv a {
-    font-size: 0.9rem; 
-    padding: 8px 20px; 
+    font-size: 0.9rem;
+    padding: 8px 20px;
+  }
+
+  .projects-title h2 {
+    font-size: 2.5em;
   }
 
   .swiper {
