--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ h1 {
   white-space: nowrap; /* Impede quebra de linha no texto */
   border-right: none; /* Simula o cursor de digitação */
   width: 0; /* Inicialmente, largura 0 para o efeito de digitação */
-  animation: typing 3s steps(50, end) infinite, gradient-move 7s ease infinite;
+  animation: typing 5s steps(50, end) infinite, gradient-move 7s ease infinite;
   background: linear-gradient(
     90deg,
     #08f108,
@@ -671,12 +671,12 @@ h1 {
 
   .home {
     flex-direction: column;
-    padding: 2rem 3.5rem;
+    padding: 2rem 1.5rem;
     margin-bottom: 50px;
   }
 
   .home-info {
-    max-width: 340px; /* Reduz a largura para caber em telas menores */
+    max-width: 100%; /* Reduz a largura para caber em telas menores */
     margin-left: auto;
     text-align: center;
   }
