--- a/styles.css
+++ b/styles.css
@@ -688,13 +688,13 @@ h1 {
 
   .home-info h2 {
     font-size: 1.6rem;
-    letter-spacing: 0.8px;
+    letter-spacing: 1px;
     animation: typing 5s steps(50, end) infinite, gradient-move 7s ease infinite; /* Ajusta o tempo das animações */
   }
 
   .home-image {
     max-width: 90%; /* Reduz a largura máxima */
-    margin-top: 3rem;
+  
   }
 
   .photo {
@@ -702,9 +702,9 @@ h1 {
     height: 20.5rem; /* Mantém o formato */
   }
 
-  .container-techs {
+  /* .container-techs { 
     margin-top: 110px;
-  }
+  }*/
 
   .container-techs h3 {
     font-size: 1.875rem;
