--- a/styles.css
+++ b/styles.css
@@ -101,13 +101,14 @@ h1 {
   font-size: 3rem;
   margin-top: -1.5rem;
   color: #ffff;
+  padding: 5px;
 }
 .home-info h2 {
   font-size: 2.8rem;
   overflow: hidden; /* Esconde o texto além da largura */
   white-space: nowrap; /* Impede quebra de linha no texto */
   border-right: none; /* Simula o cursor de digitação */
-  width: 0; /* Inicialmente, largura 0 para o efeito de digitação */
+  width:0; /* Inicialmente, largura 0 para o efeito de digitação */
   animation: typing 5s steps(50, end) infinite, gradient-move 7s ease infinite;
   background: linear-gradient(
     90deg,
@@ -166,7 +167,8 @@ h1 {
 .icons-techs li {
   list-style: none;
   position: relative;
-  padding: 0 50px 0 0;
+  padding: 0 10px 0 0;
+  margin: 0px 15px;
 }
 
 .icons-techs li img {
@@ -688,7 +690,7 @@ h1 {
 
   .home-info h2 {
     font-size: 1.6rem;
-    letter-spacing: 1px;
+    letter-spacing: 4px;
     animation: typing 5s steps(50, end) infinite, gradient-move 7s ease infinite; /* Ajusta o tempo das animações */
   }
 
