--- a/styles.css
+++ b/styles.css
@@ -678,7 +678,7 @@ h1 {
   }
 
   .home-info {
-    max-width: 86%; /* Reduz a largura para caber em telas menores */
+    max-width: 88%; /* Reduz a largura para caber em telas menores */
     margin-left: auto;
     text-align: center;
   }
@@ -691,8 +691,8 @@ h1 {
   .home-info h2 {
     
     
-    font-size: 1.6rem;
-    letter-spacing: 1.5px;
+    font-size: 19px;
+    /* letter-spacing: 1.5px; */
     animation: typing 5s steps(50, end) infinite, gradient-move 7s ease infinite; /* Ajusta o tempo das animações */
   }
 
