--- a/styles.css
+++ b/styles.css
@@ -690,9 +690,9 @@ h1 {
 
   .home-info h2 {
     
-    
+    text-align: justify;
     font-size: 19px;
-    /* letter-spacing: 1.5px; */
+    letter-spacing: 1.5px;
     animation: typing 5s steps(50, end) infinite, gradient-move 7s ease infinite; /* Ajusta o tempo das animações */
   }
 
